# pagure-exporter

./: .gitignore  .gitleaks.toml  .packit.yaml  .pre-commit-config.yaml  README.md  doformat.sh  pagure-exporter.spec  pyproject.toml  tox.ini
.github/workflows/: main.yml
packit/installation/: main.fmf
pagure_exporter/: __init__.py  main.py
pagure_exporter/conf/: __init__.py  standard.py
pagure_exporter/view/: dcrt.py  misc.py  repo.py  stat.py  tkts.py
pagure_exporter/view/forgejo/: main.py
pagure_exporter/view/gitlab/: __init__.py  main.py
pagure_exporter/work/: __init__.py  keep.py  repo.py  stat.py  tkts.py
pagure_exporter/work/gitlab/: repo.py  tkts.py
protop2g/: __init__.py  main.py  test.py
protop2g/base/: __init__.py  data.py
protop2g/conf/: standard.py
protop2g/view/: __init__.py  dcrt.py  info.py  misc.py  repo.py  srce.py  stat.py  tkts.py
protop2g/work/: info.py  keep.py  repo.py  rqst.py  srce.py  stat.py  tkts.py
test/: __init__.py  conftest.py  test_main.py  test_repo.py  test_repo_cent.py  test_repo_dist.py  test_repo_fedo.py  test_stat.py  test_tkts.py  test_unit_gitlab.py  test_unit_repo.py  test_unit_tkts.py
test/cassettes/test_stat/: test_stat_destdata_obtninfo[Checking for possible errors while attempting to authenticate in the destination namespace using wrong credentials].yaml  test_stat_destdata_obtninfo[GitLab- Checking for possible errors while attempting to authenticate in the destination namespace using wrong credentials].yaml
test/cassettes/test_tkts/: test_main_tkts[GitLab- Transferring issue tickets from a source namespace that does not exist].yaml  test_main_tkts[GitLab- Transferring issue tickets to a destination namespace that does not exist].yaml  test_main_tkts[GitLab- Transferring issue tickets with FULL status along with comments but without labels, without privacy, without states and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with FULL status along with labels but without states, without privacy, without comments and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with FULL status along with states but without comments, without privacy, without labels and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with FULL status without labels, without states, without privacy, without comments and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with OPEN status along with comments but without labels, without privacy, without states and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with OPEN status along with labels but without states, without privacy, without comments and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with OPEN status along with privacy but without states, without comments, without labels and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with OPEN status along with states but without comments, without privacy, without labels and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with OPEN status without labels, without states, without privacy, without comments and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with SHUT status along with comments but without labels, without privacy, without states and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with SHUT status along with labels but without states, without privacy, without comments and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with SHUT status along with privacy but without states, without comments, without labels and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with SHUT status along with states but without comments, without privacy, without labels and with order].yaml  test_main_tkts[GitLab- Transferring issue tickets with SHUT status without labels, without states, without privacy, without comments and with order].yaml  test_main_tkts[GitLab- Transferring particular issue tickets with OPEN status along with states and comments but without labels, without privacy and with order].yaml  test_main_tkts[Transferring issue tickets from a source namespace that does not exist].yaml  (+35 more)
(+38 files in other folders)
