[tool.poetry]
name = "protop2g"
version = "0.1.0"
description = "A prototype project assets importer that moves repositories from Pagure to GitLab"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.3"
tqdm = "^4.64.1"
GitPython = "^3.1.37"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "<5.0.0"
tox = "^4.0.0"
bandit = "^1.7.4"
pytest = "^7.1.3"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^3.0.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.285"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 100

[tool.bandit]
tests = ["B201", "B301"]

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
fix = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
protop2g = "protop2g.main:main"
