[tool.poetry]
name = "protop2g"
version = "0.1.0"
description = "A prototype project assets importer that moves repositories from Pagure to GitLab"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.3"
tqdm = "^4.64.1"
GitPython = "^3.1.37"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^22.8.0"
tox = "^4.0.0"
pytest = "^7.1.3"
pytest-cov = "^4.1.0"
ruff = "^0.0.285"

[tool.ruff]
select = ["E", "F", "W", "I", "S", "B", "UP"]
line-length = 100
fix = true

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
protop2g = "protop2g.main:main"
